# Pipeline-Cateory-A---Data-Explorers-2026

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
docs/: data-quality.md
src/ingest/: __init__.py  cli.py  customer_extractor.py  db_writer.py  email_parser.py  models.py  pdf_parser.py  validators.py
tests/: test_customer_extractor.py  test_pdf_parser.py
