[project]
name = "ingest"
version = "0.1.0"
description = "Pipeline A — TNH Bike: parse .eml + PDF đính kèm thành SalesOrder/OrderLine cho schema tnbike"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "duongdd" }]
dependencies = [
  "pdfplumber>=0.11.0",
  "pydantic>=2.7.0",
  "typer>=0.12.0",
  "tqdm>=4.66.0",
  "loguru>=0.7.2",
]

[project.optional-dependencies]
excel = [
  "openpyxl>=3.1.5",
]
db = [
  "psycopg[binary]>=3.2.0",
  "python-dotenv>=1.0.1",
]
dev = [
  "pytest>=8.2.0",
  "ruff>=0.5.0",
]

[project.scripts]
ingest = "ingest.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ingest"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
